# xhs-image-parser

./: .dockerignore  .gitignore  CLOUDFLARE_DEPLOY.md  Dockerfile  README.md  app.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  wrangler.jsonc
.github/workflows/: tests.yml
chrome-extension/: background.js  content.js  manifest.json  media-utils.js  popup.css  popup.html  popup.js
scripts/: test.ps1
src/: index.js  page.js  parser.js
tests/: extension.test.mjs  test_app.py  test_parser.py  worker.test.mjs
xhs_parser/: __init__.py  parser.py
